welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: value =< is not a member of Int
	if (a =< 19 && a >= 13)
              ^hasTeen:5: error: value =< is not a member of Int
	if (b =< 19 && b >= 13)
              ^hasTeen:8: error: value =< is not a member of Int
	if (c =< 19 && c>= 13 )
              ^